<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dreambeam</groupId>
    <artifactId>dreambeam</artifactId>
    <version>theBest</version>
    <packaging>jar</packaging>

    <name>DreamBeam</name>
    <description>DreamBeam - Dreamcast collectors tool</description>
    <url>http://tv-games.ru</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <javafx.version>23.0.2</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <gluonfx.maven.plugin.version>1.0.23</gluonfx.maven.plugin.version>
        <mainClass>md.leonis.dreambeam.MainApp</mainClass>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <!--<dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.15.2</version>
            <scope>test</scope>
        </dependency>-->
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
        <!--<dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.15.2</version>
            <scope>test</scope>
        </dependency>-->

        <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-model -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.9.9</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.maven.plugin.version}</version>
                <configuration>
                    <target>host</target>
                    <verbose>false</verbose>
                    <mainClass>${mainClass}</mainClass>
                    <resourcesList>
                        <list>app.properties</list>
                        <list>languages_en_US.properties</list>
                        <list>languages_ru_RU.properties</list>
                        <list>icons.icon16.png</list>
                        <list>icons.icon20.png</list>
                        <list>icons.icon24.png</list>
                        <list>icons.icon32.png</list>
                        <list>icons.icon64.png</list>
                        <list>icons.icon128.png</list>
                        <list>icons.icon256.png</list>
                    </resourcesList>
                    <bundlesList>
                        <list>languages</list>
                    </bundlesList>
                    <reflectionList>
                        <list>md.leonis.dreambeam.MainApp</list><!--unneeded-->
                        <list>md.leonis.dreambeam.utils.JavaFxUtils</list><!--unneeded-->
                        <list>md.leonis.dreambeam.view.AboutStageController</list>
                        <list>md.leonis.dreambeam.view.AuditStageController</list>
                        <list>md.leonis.dreambeam.view.BaseStageController</list>
                        <list>md.leonis.dreambeam.view.ComparePaneController</list>
                        <list>md.leonis.dreambeam.view.MainStageController</list>
                        <list>md.leonis.dreambeam.view.PrimaryPaneController</list>
                        <list>md.leonis.dreambeam.view.SavePaneController</list>
                        <list>md.leonis.dreambeam.view.StatsStageController</list>
                        <list>md.leonis.dreambeam.view.ViewPaneController</list>
                        <list>md.leonis.dreambeam.view.WizardStageController</list>
                        <list>javafx.scene.control.Hyperlink</list>
                        <list>javafx.scene.control.Menu</list>
                        <list>javafx.scene.control.MenuBar</list>
                        <list>javafx.scene.control.MenuItem</list>
                        <list>javafx.scene.control.ProgressBar</list>
                        <list>javafx.scene.control.RadioButton</list>
                        <list>javafx.scene.control.Separator</list>
                        <list>javafx.scene.control.SeparatorMenuItem</list>
                        <list>javafx.scene.control.Spinner</list>
                        <list>javafx.scene.control.TitledPane</list>
                        <list>javafx.scene.image.Image</list>
                        <list>javafx.scene.image.ImageView</list>
                    </reflectionList>
                    <releaseConfiguration>
                        <vendor>Leonis</vendor>
                        <description>${project.description}</description>
                        <version>${project.version}</version>
                        <skipSigning>true</skipSigning>
                    </releaseConfiguration>
                </configuration>
            </plugin>

            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>
                                        md.leonis.dreambeam.MainApp
                                    </mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->

            <!--<plugin>
                <groupId>org.graalvm.nativeimage</groupId>
                <artifactId>native-image-maven-plugin</artifactId>
                <version>21.1.0</version>
                <configuration>
                    <buildArgs>-J-Xmx4G -H:+ReportExceptionStackTraces -Djava.awt.headless=true -Dspring.native.remove-unused-autoconfig=true -Dspring.native.remove-yaml-support=true</buildArgs>
                    <imageName>${project.artifactId}</imageName>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>native-image</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>-->
        </plugins>
    </build>
</project>